# StrixEditor

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  StrixEditor.cpp  StrixEditor.h
